--- a/listDirectory.ipynb
+++ b/listDirectory.ipynb
@@ -18,17 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. [HKSTS'16] Estimating Traffic States And Identifying Their Causes and Effects Through Probe and Social Media Data Analysis.pdf\n10. [IJCAI'13] Improving Traffic Prediction with Tweet Semantics.pdf\n2. [ECMLPKDD'16] Enhancing Traffic Congestion Estimation with Social Media by Coupled Hidden Markov Model.pdf\n3. [SIGSPATIAL LBSN'12] Traffic Observatory_A System to Detect and Locate Traffic Events and Conditions Using Twitter.pdf\n4. [IUI'13] Westland Row Why So Slow Fusing Social Media and Linked Data Sources for Understanding Real-time Traffic Conditions.pdf\n5. [SIGSPATIAL GIS'15] Citywide Traffic Congestion Estimation with Social Media.pdf\n6. [IEEE MDM'2016] Estimating Urban Traffic Congestions with Multi-sourced Data.pdf\n7. [ICDM'14] Road Traffic Congestion Monitoring in Social Media with Hinge-loss Markov Random Fields.pdf\n8. [SIGSPATIAL GIS'14] A Search and Summary Application for Traffic Events Detection Based on Twitter Data.pdf\n9. [ICWSM'09] Event Detection and Tracking in Social Streams.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def modifyDirectory(dirPath):\n",
     "    changList=\"\"\n",
@@ -42,15 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. [HKSTS'16] Estimating Traffic States And Identifying Their Causes and Effects Through Probe and Social Media Data Analysis.pdf\n10. [IJCAI'13] Improving Traffic Prediction with Tweet Semantics.pdf\n2. [ECMLPKDD'16] Enhancing Traffic Congestion Estimation with Social Media by Coupled Hidden Markov Model.pdf\n3. [SIGSPATIAL LBSN'12] Traffic Observatory_A System to Detect and Locate Traffic Events and Conditions Using Twitter.pdf\n4. [IUI'13] Westland Row Why So Slow Fusing Social Media and Linked Data Sources for Understanding Real-time Traffic Conditions.pdf\n5. [SIGSPATIAL GIS'15] Citywide Traffic Congestion Estimation with Social Media.pdf\n6. [IEEE MDM'2016] Estimating Urban Traffic Congestions with Multi-sourced Data.pdf\n7. [ICDM'14] Road Traffic Congestion Monitoring in Social Media with Hinge-loss Markov Random Fields.pdf\n8. [SIGSPATIAL GIS'14] A Search and Summary Application for Traffic Events Detection Based on Twitter Data.pdf\n9. [ICWSM'09] Event Detection and Tracking in Social Streams.pdf\n"
-     ]
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'D:/OneDrive - Advokaadibüroo Küllike Namm OÜ/HKU/THESIS/PreviousTAwork/Incident Detection Package/References/References 3 - Incident Detection with Social Media'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-9f3427b92244>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdirPath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'D:\\OneDrive - Advokaadibüroo Küllike Namm OÜ\\HKU\\THESIS\\PreviousTAwork\\Incident Detection Package\\References\\References 3 - Incident Detection with Social Media'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mchangList\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodifyDirectory\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdirPath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchangList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfiles\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'D:/OneDrive - Advokaadibüroo Küllike Namm OÜ/HKU/THESIS/PreviousTAwork/Incident Detection Package/References/References 3 - Incident Detection with Social Media'"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
